💄 Fix gaps for hidden inputs See #52

--- a/assets/style/form.scss
+++ b/assets/style/form.scss
@@ -31,6 +31,8 @@
 		}
 	}
 	
+	&.is-type-hidden,
+	&.is-type-system,
 	&:last-child {
 		margin-bottom: 0;
 	}
